Fixed a layout bug of Selector.

--- a/less/selectors.less
+++ b/less/selectors.less
@@ -15,6 +15,7 @@
   padding: 5px;
   line-height: @baseLineHeight;
   vertical-align: top;
+  overflow: hidden;
 }
 
 .sel-txt {
